# aitisa_api

./: CMakeLists.txt  Doxyfile.in  README.md
auto_test/: CMakeLists.txt  auto_add_test.cpp  auto_add_test.h  auto_matmul_test.h  auto_test.h  basic.cpp  basic.h  sample.cpp  sample.h
auto_test/test_code/: activation_test.h  binary_op_test.h  conv_test.h  matmul_test.h
auto_testing/: auto_add_test.cpp  auto_add_test.h  basic.h
cmake/local/: GTest.cmake  GTest1.cmake
cmake/public/: Doxygen.cmake  GTest.cmake  OpenMP.cmake
doc/html/: README_8md.html  annotated.html  binary__op_8c.html  binary__op_8h.html  binary__op_8h_source.html  broadcast_8h.html  broadcast_8h_source.html  conv_8c.html  device_8h.html  device_8h_source.html  factories_8h.html  factories_8h_source.html  functions_vars.html  globals_a.html  globals_c.html  globals_enum.html  globals_eval.html  globals_func.html  globals_g.html  globals_t.html  index.html  index__utils_8c.html  menudata.js  shape_8h.html  shape_8h_source.html  storage_8h.html  storage_8h_source.html  structDataType-members.html  structDevice.html  structLayout.html  structShape.html  struct__StorageImpl-members.html  tensor_8c.html  tensor_8h.html  tensor_8h_source.html
doc/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  classes_0.js  classes_1.js  classes_4.js  defines_1.js  enums_3.js  enums_4.js  (+20 more)
docs/: mainpage.md
docs/html/: allocator_8c.html  allocator_8h.html  allocator_8h_source.html  annotated.html  batch__norm_8c.html  batch__norm_8h.html  batch__norm_8h_source.html  binary__op_8c.html  binary__op_8h.html  binary__op_8h_source.html  broadcast_8c.html  broadcast_8h.html  broadcast_8h_source.html  cast_8c.html  cast_8h.html  cast_8h_source.html  classes.html  conv_8c.html  conv_8h.html  conv_8h_source.html  device_8c.html  device_8h.html  device_8h_source.html  dir_19cc486433ea5376139db663715c98a5.html  dir_38cd9eca440b760dc966f21b1f8d8f41.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8ddd85c06ebeec0a6efc6a7da38f01d9.html  dir_ae9a93452e2a84339148a16bcf2eb561.html  dir_aebb8dcc11953d78e620bbef0b9e2183.html  dispatch_8h.html  dispatch_8h_source.html  dot_8c.html  dot_8h.html  dot_8h_source.html  dropout_8c.html  dropout_8h.html  dropout_8h_source.html  duplicate_8c.html  duplicate_8h.html  (+112 more)
src/basic/: broadcast.c  broadcast.h  cast.c  cast.h  duplicate.c  duplicate.h  factories.c  factories.h  index_utils.c  index_utils.h  reshape.c  reshape.h  slice.c  slice.h  squeeze.c  squeeze.h
src/core/: allocator.c  allocator.h  device.h  dispatch.h  log.h  shape.c  shape.h  status.h  storage.c  storage.h  tensor.c  tensor.h  types.c  types.h  utils.h
src/math/: add.c  add.h  binary_op.c  binary_op.h  dot.c  dot.h  matmul.c  matmul.h  sqrt.c  sqrt.h
src/nn/: batch_norm.c  batch_norm.h  conv.c  conv.h  dropout.c  dropout.h  pooling.c  pooling.h  relu.c  relu.h  sigmoid.c  sigmoid.h  softmax.c  softmax.h  tanh.c  tanh.h
test/: CMakeLists.txt  batch_norm_test.cpp  binary_test.cpp  broadcast_test.cpp  cast_test.cpp  conv_test.cpp  dot_test.cpp  dropout_test.cpp  duplicate_test.cpp  matmul_test.cpp  pooling_test.cpp  relu_test.cpp  reshape_test.cpp  sigmoid_test.cpp  slice_test.cpp  softmax_test.cpp  sqrt_test.cpp  squeeze_test.cpp  tensor_test.c  tensor_test.cpp
(+91 files in other folders)
